--- a/login.css
+++ b/login.css
@@ -11,3 +11,5 @@
 
 .botao_entrar{background-color: #24938c;width: 250px;margin-top: 30px; border-radius: 3cm;color: white;
         font-size: 15px;font-family: Helvetica;}
+
+.nav_fechar{margin-left:1300px;}
