--- a/agendamento.css
+++ b/agendamento.css
@@ -10,3 +10,7 @@
     font-family: Helvetica;}
     
 .texto{text-align: left;}
+
+.nav_login{margin-left:20px;}
+
+.nav_fechar{margin-left: 1300px;}
