--- a/cadastro.css
+++ b/cadastro.css
@@ -14,5 +14,6 @@ input:focus{
 .class_botao_enviar{background-color: #24938c;width: 250px;margin-top: 30px; border-radius: 3cm; color:white;font-size: 15px;
 font-family: Helvetica;}
 
+.nav_fechar{margin-left:1300px;}
 
 
